# poc-forecast-tft

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: tft_supplies_cp_e52_d26.yaml
notebooks/: tft_poc.ipynb  tft_poc_cp.ipynb  tft_poc_cp.py
scripts/: diagnose_backtest.py  eda_pre_modeling_supplies_style.py  eval_utils.py  experiment_report.py  forecast_utils.py  mlflow_logging.py  predict.py  preprocess_supplies_cp.py  train.py  visualize.py
specs/: _index.yaml  mlflow-experiment-tracking.md  train-sc-tft-multistep.md
sql/: 01_FACT_SALES_WEEKLY_SC_TOTAL_SUPPLIES.sql  extract_sc_weekly.sql
tests/: conftest.py  test_horizon_bin.py  test_mlflow_logging.py  test_preprocess_supplies_cp.py  test_seasonal_naive.py  test_visualize.py
